--- a/.vitepress/theme/custom.css
+++ b/.vitepress/theme/custom.css
@@ -4,3 +4,11 @@
     --vp-home-hero-image-background-image: linear-gradient(-45deg, #bd34fe 50%, #47caff 50%);
     --vp-home-hero-image-filter: blur(68px);
 }
+
+.medium-zoom-overlay {
+    z-index: 9999;
+}
+
+.medium-zoom-image {
+    z-index: 10000;
+}
